<resources>
    <string name="app_name">BIR Player</string>

    <string name="test">Test</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_play">Play</string>
    <string name="button_stop">Stop</string>
    <string name="button_pause">Pause</string>

    <string name="vifi_connection">WiFi connection</string>
    <string name="mobile_connection">Mobile connection</string>
    <string name="no_connection">Niste povezani na internet. Nećete biti u mogućnosti da slušate radio stanice!!</string>
    <string name="mobile_connection_hint">Na internet ste povezani preko mobilne mreže. Postoji mogućnost da Vaš
    mobilni operator naplati troškove prenosa podataka!</string>
    <string name="ok">Uredu</string>
    <string name="no_audio_focus">Audio sistem zauzet!</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="radio_station_loading">Učitavam radio stanice</string>
    <string name="check_internet_connection">Provjerite internet konekciju...</string>
    <string name="server_unreachable">Server nedostupan...</string>
    <string name="streaming_server_unreachable">"Greška: Streaming server nedostupan</string>
    <string name="streaming_server_lost_conn">Greška: Izgubljena konekcija sa streaming serverom</string>
    <string name="search">Pretraga</string>
    <string name="clear">Obriši</string>
    <string name="tab_radio_station_list">Radio Stanice</string>
    <string name="tab_now_playing">Sada svira</string>
    <string name="no_radio_station_selected">Nije izabrana radio stanica!</string>
    <string name="no_song_title">Naziv pjesme nepoznat</string>
    <string name="status">Status</string>
    <string name="radio_location">Location</string>
    <string name="radio_station">Radio Station</string>
    <string name="radio_url">URL</string>
    <string name="radio_genre">Genre</string>
    <string name="connecting_string">Učitavanje...</string>
    <string name="error_string">Greška!</string>
    <string name="playing_string">Svira...</string>
    <string name="stopped_string">Stopirano</string>
    <string name="paused_string">Pauzirano</string>
    <string name="buffering_string">Učitavanje...</string>
    <string name="storage_permission">Aplikacijije potrebna dozvola za pristup prostoru za pohranu da bi mogla snimati radio stanice.</string>
    <string name="storage_permission_title">Potrebna dozvola</string>
    <string name="error_recording">Greška prilikom snimanja!</string>
    <string name="recordings_deleted">Odabrane sinmke su izbrisane</string>
    <string name="all_radio_stations">Sve radio stanice</string>
    <string name="favorite_radio_stations">Omiljene</string>
    <string name="pop_radio_stations">Zabavna</string>
    <string name="folk_radio_stations">Narodna</string>
    <string name="sarajevo_radio_stations">Sarajevo</string>
    <string name="recordings">Snimci</string>
    <string name="about_string">O aplikaciji</string>
    <string name="exit">Izlaz</string>
    <string name="about">O aplikaciji</string>
    <string name="created">Copyright: Komiso 2017.</string>
    <string name="share">Podjeli</string>
    <string name="share_app_string">Uživajte u slušanju omiljenih bosanskohercegovačkih radio stanica putem BIR Player aplikacije. https://play.google.com/store/apps/details?id=net.komiso.otatar.birplayer</string>
    <string name="share_birp">Podjeli BIR Player</string>
    <string name="share_app_listen">Uživam slušati %s koristeći BIR Player. https://play.google.com/store/apps/details?id=net.komiso.otatar.birplayer</string>



    <string-array name="drawer_items">
        <item>Sve radio stanice</item>
        <item>Omiljene</item>
        <item>Zabavna</item>
        <item>Narodna</item>
        <item>Sarajevo</item>
        <item>Snimci</item>>
    </string-array>

    <string-array name="drawer_footer_items">
        <item>O aplikaciji</item>
        <item>Izlaz</item>
    </string-array>


</resources>
