<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".RadioPlayerFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id = "@+id/linear1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_location"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_url"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id = "@+id/linear2">

        <!--  <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/text_status"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:layout_gravity="center_horizontal"
              android:layout_marginTop="20dp"
              android:text="Status"/> -->

        <CheckBox
            android:id="@+id/station_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/starStyle"
            android:layout_gravity="center_horizontal"/>


        <!--<TextView
            android:id="@+id/playing_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00:00"
            android:layout_gravity="center_horizontal"/> -->

        <me.itangqi.waveloadingview.WaveLoadingView
            android:id="@+id/waveLoadingView"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_gravity="center_horizontal"
            app:wlv_borderColor="@color/colorPrimary"
            app:wlv_borderWidth="1dp"
            app:wlv_progressValue="60"
            app:wlv_shapeType="circle"
            app:wlv_round_rectangle="true"
            app:wlv_triangle_direction="north"
            app:wlv_titleTopStrokeColor="@android:color/holo_blue_dark"
            app:wlv_titleTopStrokeWidth="3dp"
            app:wlv_titleTop=""
            app:wlv_titleTopColor="@android:color/white"
            app:wlv_titleTopSize="15sp"
            app:wlv_titleCenterStrokeColor="@android:color/holo_blue_dark"
            app:wlv_titleCenterStrokeWidth="3dp"
            app:wlv_titleCenter=""
            app:wlv_titleCenterColor="@android:color/white"
            app:wlv_titleCenterSize="15sp"
            app:wlv_titleBottomStrokeColor="@android:color/holo_blue_dark"
            app:wlv_titleBottomStrokeWidth="3dp"
            app:wlv_titleBottom=""
            app:wlv_titleBottomColor="@android:color/white"
            app:wlv_titleBottomSize="15sp"
            app:wlv_waveAmplitude="0"
            app:wlv_waveColor="@color/colorAccent"/>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id = "@+id/relative3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_play"
                android:text="@string/button_play"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_pause"
                android:text="@string/button_pause"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_stop"
                android:text="@string/button_stop"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
